--- a/src/scheduler/SchedulerComponent.css
+++ b/src/scheduler/SchedulerComponent.css
@@ -1,4 +1,4 @@
-@import 'https://js.arcgis.com/4.29/@arcgis/core/assets/esri/themes/light/main.css';
+/* https://bryntum.com/products/scheduler/docs/guide/Scheduler/integration/react/guide */
 @import '@bryntum/scheduler/scheduler.stockholm.css';
 
 #geodata-scheduler-container {
